# TXSEX

./: .gitignore  Akai Force Development Toolchain.md  CMakeLists.txt  README.md  RtMidi.cpp  force.cmake  force_toolchain.cmake  main.cpp  main.cpp.dx
dist_template/: DX-MIDI-PORT.txt  run_tx_alt1.sh  run_txsex.sh
